# sql-agent-spider

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/retail_analytics/: questions.json  schema.sql  seed.sql
docs/: PORTFOLIO_GUIDE.md
scripts/: run_benchmark.py  run_demo.py  setup_local_db.py
src/retail_sql_agent/: __init__.py  agent.py  benchmark.py  config.py  execution.py  local_sqlite.py  models.py  prompts.py  warnings_config.py
tests/: test_local_custom_question.py  test_local_dataset.py  test_prompts.py
